add redux storage and improve websocket linked

--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "@stomp/stompjs": "^7.0.0",
     "antd": "^5.22.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "deep-email-validator": "^0.1.21",
+    "email-deep-validator": "^3.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-stomp": "^5.1.0",
-    "react-use-websocket": "^4.11.1",
     "react-stomp-hooks": "^2.1.0",
+    "react-transition-group": "^4.4.5",
+    "react-use-websocket": "^4.11.1",
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1"
   },
@@ -26,6 +32,7 @@
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-transition-group": "^4.4.11",
     "@types/sockjs": "^0.3.36",
     "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^4.3.1",
