--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.13",
     "deep-email-validator": "^0.1.21",
     "email-deep-validator": "^3.3.0",
     "react": "^18.3.1",
@@ -26,7 +27,8 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.11.1",
     "sockjs": "^0.3.24",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "typescript-collections": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
